[metadata]
name = javago
version = 0.0.1
summary = Api test
description-file = README

[files]
packages =
    javago
data_files =
    share/javago = api/*

[global]
setup-hooks =
    pbr.hooks.setup_hook

#[build_sphinx]
#all_files = 1
#build-dir = doc/build
#source-dir = doc/source

[wheel]
universal = 1

[entry_points]
console_scripts =
    javago = javago.cmd:javago
    javago_reader = javago.cmd:reader

