[metadata]
name = restfuzz
version = 0.0.1
summary = Api test
description-file = README

[files]
packages =
    restfuzz
data_files =
    share/restfuzz = api/*

[global]
setup-hooks =
    pbr.hooks.setup_hook

#[build_sphinx]
#all_files = 1
#build-dir = doc/build
#source-dir = doc/source

[wheel]
universal = 1

[entry_points]
console_scripts =
    restfuzz = restfuzz.cmd:restfuzz
    restfuzz_reader = restfuzz.cmd:reader

